<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.finska.team">

    <EditText
        android:id="@+id/player_name_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player_one_hint"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/player_name_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player_two_hint"
        android:inputType="textCapWords" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="teamAccept"
        android:text="@string/player_accept" />


    <TextView
        style="@style/HeaderTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team_window_initial" />

    <ListView
        android:id="@+id/listview_teamselect"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"> />
    </ListView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="finishTeamSelection"
        android:text="@string/teams_accept" />


</LinearLayout>
