<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.finska.DetailActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/detail_team_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_team_number"
        android:textSize="34sp"
        android:gravity="center_horizontal"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="5">

            <TextView
                android:id="@+id/detail_team_player_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_player_one"
                android:textSize="56sp"/>

            <TextView
                android:id="@+id/detail_team_player_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_player_two"
                android:textSize="56sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/detail_team_score"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/detail_score"
            android:textSize="56sp"
            android:gravity="center_vertical"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>
