<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.finska.Start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="selectTeam"
            android:text="@string/select_team" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_game" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_window_initial" />

        <ListView
            android:id="@+id/listview_start"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"> />
        </ListView>

    </LinearLayout>
</LinearLayout>
